--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.8.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.google.android.material:material:1.1.0'
-
+    implementation'com.danikula:videocache:2.7.0'
 }
